--- a/index.html
+++ b/index.html
@@ -20,37 +20,37 @@
     <header class="header-styles">       
         <div class="container main-nav">
             <nav class="main-nav">
-                <a class="main-nav__logo-styleheader" href="./index.html">
-                    <span class="main-nav__firstpart-logo">Web</span>Studio
+                <a class="logo-styleheader" href="./index.html">
+                    <span class="firstpart-logo">Web</span>Studio
                 </a>
-                <ul class="main-nav__navmenu">
-                    <li class="main-nav__items">
-                        <a class="main-nav__item main-nav__item--current" href="./index.html">Студія
+                <ul class="navmenu">
+                    <li class="navmenu-items">
+                        <a class="navmenu-item current" href="./index.html">Студія
                         </a>
                     </li>
-                    <li class="main-nav__items">
-                        <a class="main-nav__item" href="./portfolio.html">Портфоліо
+                    <li class="navmenu-items">
+                        <a class="navmenu-item" href="./portfolio.html">Портфоліо
                         </a>
                     </li>
-                    <li class="main-nav__items">
-                        <a class="main-nav__item" href="#">Контакти
+                    <li class="navmenu-items">
+                        <a class="navmenu-item" href="#">Контакти
                         </a>
                     </li>
                 </ul>
             </nav>
             <ul class="contact">
-                <li class="contact__items">
-                    <a class="contact__item" href="mailto:info@devstudio.com">
-                        <svg class="contact__icon contact__icon--mailsize">
+                <li class="contact-items">
+                    <a class="contact-item" href="mailto:info@devstudio.com">
+                        <svg class="svg-icon lettermail">
                             <use href="./images/sprite.svg#icon-envelope">
                             </use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="contact__items">
-                    <a class="contact__item" href="tel:+380961111111">
-                        <svg class="contact__icon contact__icon--phonesize">
+                <li class="contact-items">
+                    <a class="contact-item" href="tel:+380961111111">
+                        <svg class="svg-icon phonephone">
                             <use href="./images/sprite.svg#icon-smartf">
                             </use>
                         </svg>
@@ -365,22 +365,22 @@
     <footer class="footer-styles">
         <div class="container forfuter">
             <div class="logofuter">
-                <a class="logofuter__logostylefooter" href="./index.html">
-                    <span class="logofuter__firstpart-logo">Web</span>Studio
+                <a class="logo-stylefooter" href="./index.html">
+                    <span class="firstpart-logo">Web</span>Studio
                 </a>
                 <address class="mainadress">
-                    <ul class="mainadress__adress">
-                        <li class="mainadress__item">
-                            <a class="mainadress__itemmap" href="https://goo.gl/maps/EjAVNNordp6EHeNn6" target="_blank"
+                    <ul class="adress">
+                        <li class="adress-item">
+                            <a class="adress-itemmap" href="https://goo.gl/maps/EjAVNNordp6EHeNn6" target="_blank"
                                 rel="noreferrer nofollow noopener">м. Київ, пр-т Лесі Українки, 26
                             </a>
                         </li>
-                        <li class="mainadress__item">
-                            <a class="mainadress__itemcontact" href="mailto:info@devstudio.com">info@devstudio.com
+                        <li class="adress-item">
+                            <a class="adress-itemcontact" href="mailto:info@devstudio.com">info@devstudio.com
                             </a>
                         </li>
-                        <li class="mainadress__item">
-                            <a class="mainadress__itemcontact" href="tel:+380961111111">+38 096 111 11 11
+                        <li class="adress-item">
+                            <a class="adress-itemcontact" href="tel:+380961111111">+38 096 111 11 11
                             </a>
                         </li>
                     </ul>
@@ -453,32 +453,32 @@
             <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
             <form class="modal-form">
                 <div class="form-element">
-                    <input type="text" name="name" id="name" minlength="3" autocomplete="off" placeholder=" " required class="form-input"/>
                     <label for="name">Ім'я</label>
+                    <input type="text" name="name" id="name" minlength="3" autocomplete="off" placeholder=" " required class="form-input"/>
                     <svg width="18" height="18" class="modal-icon">
                         <use href="./images/sprite.svg#icon-humanmodal">
                         </use>
                     </svg>
                 </div>
                 <div class="form-element">
-                    <input type="tel" name="phone" id="phone" minlength="13" maxlength="13" autocomplete="off" placeholder=" " required class="form-input"/>
                     <label for="phone">Телефон</label>
+                    <input type="tel" name="phone" id="phone" minlength="13" maxlength="13" autocomplete="off" placeholder=" " required class="form-input"/>
                     <svg width="18" height="18" class="modal-icon">
                         <use href="./images/sprite.svg#icon-phonemodal">
                         </use>
                     </svg>
                 </div>
                 <div class="form-element">
-                    <input type="email" name="email" id="email" autocomplete="off" placeholder=" " required class="form-input"/>
                     <label for="email">Пошта</label>
+                    <input type="email" name="email" id="email" autocomplete="off" placeholder=" " required class="form-input"/>
                     <svg width="18" height="18" class="modal-icon">
                         <use href="./images/sprite.svg#icon-lattermodal">
                         </use>
                     </svg>
                 </div>
                 <div class="form-element form-elementtextarea">
-                    <textarea name="comment" id="comment" cols="54" rows="6" placeholder="Введіть текст" class="form-textarea"></textarea>
                     <label for="comment">Коментар</label>
+                    <textarea name="comment" id="comment" cols="54" rows="6" placeholder="Введіть текст" class="form-textarea"></textarea>
                 </div>
 
                 <label class="modal-checkbox">
