--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             <div class="subscribe">
                 <b class="subscribe--bold-title">підпишіться на розсилку</b>
                 <form class="subscribe__form">
-                    <label>
+                    <label class="subscribe__label">
                         <input type="email" name="email-form" autocomplete="off" required placeholder="E-mail" class="subscribe__input">
                     </label>
                     <button type="submit" class="subscribe__button">
