--- a/portfolio.html
+++ b/portfolio.html
@@ -270,7 +270,7 @@
             <div class="subscribe">
                 <b class="subscribe--bold-title">підпишіться на розсилку</b>
                 <form class="subscribe__form">
-                    <label>
+                    <label class="subscribe__label">
                         <input type="email" name="email-form" autocomplete="off" required placeholder="E-mail"
                             class="subscribe__input">
                     </label>
